Agregado nueva version del proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /APLICATIVO/LOGIN_JAVA_GRUPO8/nbproject/private/
+/APLICATIVO/LOGIN_JAVA_GRUPO8/build/
+/APLICATIVO/LOGIN_JAVA_GRUPO8/dist/
+/APLICATIVO/LOGIN_GRUPO8/nbproject/private/
+/APLICATIVO/LOGIN_GRUPO8/build/
